--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "angular2-truncate": "^0.1.3",
     "angularfire2": "^2.0.0-beta.6",
     "animate.css": "^3.5.2",
     "core-js": "^2.4.1",
